# sn-releases

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: merge.yml  release.yml
src/: error.rs  lib.rs
tests/: download_url.rs  test_download_from_s3.rs  test_get_latest_version.rs
