[package]
name = "sn-releases"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
flate2 = "1.0"
lazy_static = "1.4.0"
regex = "1.10.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tar = "0.4.40"
thiserror = "1.0.49"
tokio = { version = "1.26", features = ["full"] }
zip = "0.6.6"

[dev-dependencies]
assert_fs = "~1.0"
predicates = "2.0"
